--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  
+}
+.dark-mode {
+  color: #fff;
+  background-color: #313843;
 }
 
 code {
